--- a/caps.html
+++ b/caps.html
@@ -38,8 +38,8 @@
             <h2>Who are we</h2>
             <p>Counseling and Psychological Services (CAPS) is an agency dedicated to fostering students' psychological development and emotional well-being. It provides counseling and psychotherapy, preventive and educational programs, consultation and outreach services, and contributes to the advancement of the mental health field.
             </p>
-            <img src="images/Michigan_Union.jpg" alt="Sign that reads Michigan Union, with building behind">
-            <figcaption>Michigan Union</figcaption>
+            <figure><img src="images/Michigan_Union.jpg" alt="Sign that reads Michigan Union, with building behind">
+            <figcaption>Michigan Union</figcaption></figure>
         </section>
         <section>
             <h2>Make an initial consultation</h2>
