--- a/food_pantry.html
+++ b/food_pantry.html
@@ -38,8 +38,8 @@
             <h2>Who are we</h2>
             <p>The Maize and Blue Cupboard is a food pantry for the U-M community facing food insecurity. We connect you to immediate resources you require, such as food, household and personal products, as well as educational opportunities and support.
             </p><br>
-            <img src="images/Maize_and_blue_cupboard.jpg" alt="Interior of Maize & Blue Cupboard">
-            <figcaption>Maize & Blue Cupboard</figcaption>
+            <figure><img src="images/Maize_and_blue_cupboard.jpg" alt="Interior of Maize & Blue Cupboard">
+            <figcaption>Maize & Blue Cupboard</figcaption></figure>
         </section>
         <section>
             <h2>Make an appointment</h2>
