--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
         <h1>Something's not right</h1>
 
         <!-- dark mode button -->
-        <button onclick="myFunction()">Switch to dark mode</button>
+        <button aria-label="Activate dark mode" aria-pressed="false" onclick="myFunction()">Switch to dark mode</button>
 
     </header>
     <main id = "main">
